--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "uuid": "^3.3.3",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
