--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "eslint-loader": "^2.1.2",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
