--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "uuid": "^3.3.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^3.9.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
